@@ -13,41 +13,28 @@
    limitations under the License. */
 package com.predic8.membrane.interceptor;
 
-import com.predic8.membrane.core.HttpRouter;
-import com.predic8.membrane.core.exchange.Exchange;
-import com.predic8.membrane.core.http.Request;
-import com.predic8.membrane.core.http.Response;
-import com.predic8.membrane.core.interceptor.AbstractInterceptor;
-import com.predic8.membrane.core.interceptor.HTTPClientInterceptor;
-import com.predic8.membrane.core.interceptor.Interceptor;
-import com.predic8.membrane.core.interceptor.Outcome;
+import com.predic8.membrane.core.*;
+import com.predic8.membrane.core.exchange.*;
+import com.predic8.membrane.core.http.*;
+import com.predic8.membrane.core.interceptor.*;
 import com.predic8.membrane.core.interceptor.balancer.*;
-import com.predic8.membrane.core.proxies.ServiceProxy;
-import com.predic8.membrane.core.proxies.ServiceProxyKey;
-import com.predic8.membrane.core.services.DummyWebServiceInterceptor;
-import com.predic8.membrane.core.util.URIFactory;
-import com.predic8.membrane.core.util.URLUtil;
-import com.predic8.membrane.integration.Http11Test;
-import org.apache.commons.httpclient.HttpClient;
-import org.apache.commons.httpclient.HttpVersion;
-import org.apache.commons.httpclient.methods.InputStreamRequestEntity;
-import org.apache.commons.httpclient.methods.PostMethod;
-import org.junit.jupiter.api.AfterEach;
-import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.Test;
+import com.predic8.membrane.core.proxies.*;
+import com.predic8.membrane.core.services.*;
+import com.predic8.membrane.core.util.*;
+import org.apache.commons.httpclient.*;
+import org.apache.commons.httpclient.methods.*;
+import org.junit.jupiter.api.*;
 
-import java.net.URISyntaxException;
-import java.util.List;
+import java.net.*;
+import java.util.*;
 
-import static com.predic8.membrane.core.http.Header.CONTENT_TYPE;
-import static com.predic8.membrane.core.http.Header.SOAP_ACTION;
-import static com.predic8.membrane.core.http.MimeType.TEXT_XML_UTF8;
-import static com.predic8.membrane.core.interceptor.Outcome.ABORT;
-import static com.predic8.membrane.core.interceptor.Outcome.CONTINUE;
-import static com.predic8.membrane.core.util.NetworkUtil.getFreePortEqualAbove;
-import static java.util.Objects.requireNonNull;
-import static org.apache.http.params.HttpProtocolParams.PROTOCOL_VERSION;
-import static org.junit.jupiter.api.Assertions.assertEquals;
+import static com.predic8.membrane.core.http.Header.*;
+import static com.predic8.membrane.core.http.MimeType.*;
+import static com.predic8.membrane.core.interceptor.Outcome.*;
+import static com.predic8.membrane.core.util.NetworkUtil.*;
+import static java.util.Objects.*;
+import static org.apache.http.params.HttpProtocolParams.*;
+import static org.junit.jupiter.api.Assertions.*;
 
 public class LoadBalancingInterceptorTest {
 
@@ -60,17 +47,14 @@ public class LoadBalancingInterceptorTest {
 	private HttpRouter service2;
 	protected HttpRouter balancer;
 
-	private int port2k;
-	private int port3k;
-
     @BeforeEach
 	public void setUp() throws Exception {
-		port2k = getFreePortEqualAbove(2000);
-		port3k = getFreePortEqualAbove(3000);
+        int port2k = getFreePortEqualAbove(2000);
+        int port3k = getFreePortEqualAbove(3000);
 		service1 = new HttpRouter();
 		mockInterceptor1 = new DummyWebServiceInterceptor();
 		ServiceProxy sp1 = new ServiceProxy(new ServiceProxyKey("localhost",
-				"POST", ".*", port2k), "thomas-bayer.com", 80);
+				"POST", ".*", port2k), "dummy", 80);
 		sp1.getInterceptors().add(new AbstractInterceptor(){
 			@Override
 			public Outcome handleResponse(Exchange exc) {
@@ -85,7 +69,7 @@ public class LoadBalancingInterceptorTest {
 		service2 = new HttpRouter();
 		mockInterceptor2 = new DummyWebServiceInterceptor();
 		ServiceProxy sp2 = new ServiceProxy(new ServiceProxyKey("localhost",
-				"POST", ".*", port3k), "thomas-bayer.com", 80);
+				"POST", ".*", port3k), "dummy", 80);
 		sp2.getInterceptors().add(new AbstractInterceptor(){
 			@Override
 			public Outcome handleResponse(Exchange exc) {
@@ -99,7 +83,7 @@ public class LoadBalancingInterceptorTest {
 
 		balancer = new HttpRouter();
 		ServiceProxy sp3 = new ServiceProxy(new ServiceProxyKey("localhost",
-				"POST", ".*", 3054), "thomas-bayer.com", 80);
+				"POST", ".*", 3054), "dummy", 80);
 		balancingInterceptor = new LoadBalancingInterceptor();
 		balancingInterceptor.setName("Default");
 		sp3.getInterceptors().add(balancingInterceptor);
@@ -116,7 +100,7 @@ public class LoadBalancingInterceptorTest {
 
 	private void enableFailOverOn5XX(HttpRouter balancer2) {
 		List<Interceptor> l = balancer.getTransport().getInterceptors();
-		((HTTPClientInterceptor)l.get(l.size()-1)).setFailOverOn5XX(true);
+		((HTTPClientInterceptor)l.getLast()).setFailOverOn5XX(true);
 	}
 
 	@AfterEach
@@ -258,7 +242,7 @@ public class LoadBalancingInterceptorTest {
 		assertEquals(1, mockInterceptor1.getCount());
 		assertEquals(1, mockInterceptor2.getCount());
 
-		service1.getRuleManager().getRules().get(0).getInterceptors().add(0, new AbstractInterceptor(){
+		service1.getRuleManager().getRules().getFirst().getInterceptors().addFirst(new AbstractInterceptor(){
 			@Override
 			public Outcome handleRequest(Exchange exc) {
 				exc.setResponse(Response.internalServerError().build());
